# rs-rivus

./: .gitignore  Cargo.toml  publish_workspace.sh
atlas-db/: Cargo.toml
atlas-db/src/: lib.rs
atlas-log/: Cargo.toml
atlas-log/src/: lib.rs
atlas-utils/: Cargo.toml
atlas-utils/src/: zip_extract.rs
atlas-utils/src/ip/: mod.rs
atlas-utils/src/ip/impl/: mod.rs
atlas-utils/src/tests/: local_ip_tests.rs  mod.rs
atlas-web/: Cargo.toml
atlas-web/src/: lib.rs
atlas-ws/: Cargo.toml
atlas-ws/src/: ws_handler.rs
rivus-core/: Cargo.toml
rivus-core/src/: code.rs  lib.rs  page.rs  r.rs
rivus-core/tests/: r_tests.rs
rivus-db/: Cargo.toml
rivus-log/: Cargo.toml
rivus-log/src/: lib.rs
rivus-log/tests/: log_tests.rs
rivus-logger/: Cargo.toml
rivus-logger/src/: lib.rs
rivus-sqlx/: Cargo.toml
rivus-sqlx-macros/: Cargo.toml
rivus-sqlx-macros/src/: lib.rs  sql_macro.rs
rivus-sqlx/src/: db_conn.rs  db_pool.rs  error.rs  lib.rs  sql_parser.rs
rivus-sqlx/src/models/: db_config.rs
rivus-sqlx/src/orm/: crud_traits.rs  mod.rs  other_impl.rs  row_de.rs  sqlx_impl.rs
rivus-sqlx/src/sql_tpl/: ast.rs  cache.rs  engine.rs  mod.rs  parser.rs  render.rs  value.rs
rivus-sqlx/tests/: concurrency_test.rs  db_conn_test.rs  parser_test.rs  repository_test.rs  sql_template_test.rs  sql_tpl_include_test.rs  sqlx_test.rs  tls_transaction_test.rs  transaction_test.rs
rivus-utils/: Cargo.toml
rivus-utils/src/: date_format.rs  http_client.rs  lib.rs  uid.rs
rivus-utils/src/ip/: mod.rs
rivus-utils/src/ip/impl/: linux.rs  macos.rs  windows.rs
rivus-utils/src/tests/: zip_extractor_tests.rs
rivus-utils/tests/: date_format_tests.rs  http_client_tests.rs  local_ip_tests.rs  uid_tests.rs  zip_extractor_tests.rs
rivus-web/: Cargo.toml
rivus-web/locales/: zh.toml
rivus-web/src/: i18n.rs  i18n_middleware.rs  lib.rs  r.rs  result.rs
rivus-web/tests/: web_tests.rs  webserver_tests.rs
rivus-web/tests/locales/: en.toml
rivus-ws/: Cargo.toml
rivus-ws/src/: conn_mgr.rs  lib.rs
rivus-ws/tests/: conn_mgr_tests.rs  ws_handler_tests.rs
rivus-yaml/: Cargo.toml
rivus-yaml/src/: lib.rs
rivus-yaml/tests/: config_struct.yaml  config_struct_test.rs  env_config_test.env  env_config_test.rs  exception_test.rs  macro_config.yaml  macro_test.rs
