[workspace]
resolver = "3"
members = [
    "rivus-core",
    "rivus-log",
    "rivus-web",
    "rivus-ws",
    "rivus-utils",
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["multipart", "ws"] }


tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time", "chrono"] }
tracing-appender = "0.2.3"
anyhow = "1.0.100"
thiserror = "2.0.17"

lazy_static = "1.5.0"
futures = "0.3.31"
futures-util = "0.3"

chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tempfile = "3.8"
zip = "0.6"
rand = "0.8"