[workspace]
resolver = "3"
members = [
    "rivus-core",
    "rivus-logger",
    "rivus-web",
    "rivus-ws",
    "rivus-utils", "rivus-yaml", "rivus-sqlx",
]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# rivus-yaml
serde_yaml = "0.9.33"
regex = "1.12.2"
dotenvy = "0.15.7"

# rivus-web
tokio = { version = "1.48.0", features = ["full"] }
axum = { version = "0.8.7", features = ["multipart", "ws"] }


tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "time", "chrono"] }
tracing-appender = "0.2.3"
anyhow = "1.0.100"
thiserror = "2.0.17"

lazy_static = "1.5.0"
futures = "0.3.31"

chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tempfile = "3.8"
