[package]
name = "atlas-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.97"
get_if_addrs = "0.5"
chrono = { workspace = true }
serde = { workspace = true }
reqwest = {version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1.28.0", features = ["full"]}
futures-util = "0.3.31"
zip = "3.0.0"
tempfile = "3.17.1"
ipconfig = "0.3.2"
local-ip-address = "0.6.5"