[package]
name = "rivus-utils"
version = "0.2.0"
edition = "2024"
description = "常用工具：HTTP 客户端、时间格式化、IP/网络、ZIP、ID 编解码"
license = "Apache-2.0"

[dependencies]
rand = "0.8.5"
anyhow = "1.0.97"
chrono = { workspace = true }
serde = { workspace = true }
reqwest = {version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1.28.0", features = ["full"]}
futures-util = "0.3.31"
zip = "3.0.0"
tempfile = "3.17.1"
serde_json = "1.0"
