[package]
name = "rivus-web"
version = "0.1.0"
edition = "2024"
description = "基于 Axum 的 Web 服务基础"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
rust-i18n = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = {workspace = true}
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]

serde_json = { workspace = true }
