[package]
name = "rivus-web"
version = "0.1.0"
edition = "2024"
description = "基于 Axum 的 Web 服务基础"

[dependencies]
rivus-core = {path = "../rivus-core"}
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = {workspace = true}
validator = { version = "0.20.0", features = ["derive"] }
http = "1.3.1"


[dev-dependencies]

