[package]
name = "rivus-web"
version = "0.2.0"
edition = "2024"
description = "基于 Axum 的 Web 服务基础"

[dependencies]
rivus-core = '0.2.0'
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
thiserror = {workspace = true}
validator = { version = "0.20.0", features = ["derive"] }
toml = "0.9.8"


[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true

