[package]
name = "rivus-ws"
version = "0.1.0"
edition = "2024"
description = "基于 Axum 的 WebSocket 连接管理与心跳维护"

[dependencies]
tracing = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
