[package]
name = "rivus-yaml"
version = "0.2.0"
edition = "2024"
description = "yaml 工具，含有变量替换"
license = "Apache-2.0"

[dependencies]
serde = {workspace = true}
serde_yaml = {workspace = true}
thiserror = {workspace = true}
dotenvy = {workspace = true}
regex = {workspace = true}

[dev-dependencies]
tempfile = "3.23.0"